# users-email-server

./: Cargo.toml  README.md
src/: email_sender.rs  errors.rs  main.rs  routes.rs
