[package]
name = "users-email-server"
version = "0.1.0"
authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>"]

[dependencies]
docopt = "0.6.78"
env_logger = "0.3.2"
imap = "0.0.5"
iron = "0.3"
iron-cors = { git = "https://github.com/fxbox/iron-cors.git", rev = "f397cd2" }
lettre = "0.5"
log = "0.3"
mount = "0.1"
regex = "0.1.71"
router = "0.1.1"
rustc-serialize = "0.3"
